# docs/swagger.yaml
@@ -1,5 +1,14 @@
 basePath: /
 definitions:
+  main.CreateUserRequest:
+    properties:
+      age:
+        example: 20
+        type: integer
+      name:
+        example: test
+        type: string
+    type: object
   main.ErrorResponse:
     properties:
       code:
@@ -37,39 +46,6 @@ info:
   title: Golang Swagger API Document
   version: version1.0
 paths:
-  /user/:user_id:
-    get:
-      consumes:
-      - application/json
-      description: return user by user_id
-      parameters:
-      - description: user_id
-        in: path
-        name: user_id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/main.User'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/main.ErrorResponse'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/main.ErrorResponse'
-        "422":
-          description: Unprocessable Entity
-          schema:
-            $ref: '#/definitions/main.ErrorResponse'
-      summary: return user by user_id
-      tags:
-      - users
   /users:
     get:
       consumes:
@@ -111,6 +87,69 @@ paths:
           schema:
             $ref: '#/definitions/main.ErrorResponse'
       summary: return users
+      tags:
+      - users
+    post:
+      consumes:
+      - application/json
+      - application/json
+      description: create user
+      parameters:
+      - description: user
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/main.CreateUserRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/main.User'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/main.ErrorResponse'
+        "422":
+          description: Unprocessable Entity
+          schema:
+            $ref: '#/definitions/main.ErrorResponse'
+      summary: create user
+      tags:
+      - users
+  /users/:user_id:
+    get:
+      consumes:
+      - application/json
+      description: return user by user_id
+      parameters:
+      - description: user_id
+        in: path
+        name: user_id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/main.User'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/main.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/main.ErrorResponse'
+        "422":
+          description: Unprocessable Entity
+          schema:
+            $ref: '#/definitions/main.ErrorResponse'
+      summary: return user by user_id
       tags:
       - users
 swagger: "2.0"
