# main.go
@@ -32,6 +32,7 @@ func main() {
 
 	r.GET("/users", searchUsers)
 	r.GET("/users/:id", findUserById)
+	r.POST("/users", createUser)
 
 	r.Run()
 }
@@ -44,6 +45,11 @@ type User struct {
 
 type UsersResponse struct {
 	Users interface{} `json: "users"`
+}
+
+type CreateUserRequest struct {
+	Name string `json:"name" example:"test"`
+	Age  int    `json:"age" example:"20"`
 }
 
 type ErrorResponse struct {
@@ -77,11 +83,28 @@ func searchUsers(c *gin.Context) {
 // @produce json
 // @accept application/json
 // @param user_id path int true "user_id"
-// @router /user/:user_id [get]
+// @router /users/:user_id [get]
 // @Success 200 {object} User
 // @Failure 400 {object} ErrorResponse
 // @Failure 404 {object} ErrorResponse
 // @Failure 422 {object} ErrorResponse
 func findUserById(c *gin.Context) {
+	c.JSON(http.StatusOK, gin.H{"user": "ok"})
+}
+
+// createUser
+// @Summary create user
+// @description create user
+// @version 1.0
+// @tags users
+// @Accept  json
+// @produce json
+// @accept application/json
+// @param user body CreateUserRequest true "user"
+// @router /users [post]
+// @Success 201 {object} User
+// @Failure 400 {object} ErrorResponse
+// @Failure 422 {object} ErrorResponse
+func createUser(c *gin.Context) {
 	c.JSON(http.StatusOK, gin.H{"user": "ok"})
 }
